Adjust word spacing for headers (except main index title). Fix program page layout for small screens.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -54,14 +54,13 @@ li {
 h1, h2, h3, h4, h5, h6 {
     font-family: $heading-font;
     text-rendering: optimizeLegibility; // Fix the character spacing for headings
+    word-spacing: -10px;
 }
 h1 {
     @include font-size(36);
 }
 h2 {
     @include font-size(32);
-    // margin-top: 0;
-    // margin-bottom: 0;
 }
 h3 {
     @include font-size(28);
